--- a/public/404.html
+++ b/public/404.html
@@ -15,13 +15,12 @@
       // Note: this 404.html file must be at least 512 bytes for it to work
       // with Internet Explorer (it is currently > 512 bytes)
 
-      // If you're creating a Project Pages site and NOT using a custom domain,
-      // then set pathSegmentsToKeep to 1 (enterprise users may need to set it to > 1).
+      // For GitHub Pages with base path /Aprendo-mas/
+      // Set pathSegmentsToKeep to 1 to preserve the /Aprendo-mas/ base path
       // This way the code will only replace the route part of the path, and not
       // the real directory in which the app resides, for example:
-      // https://username.github.io/repo-name/one/two?a=b&c=d#qwe becomes
-      // https://username.github.io/repo-name/?/one/two&a=b~and~c=d#qwe
-      // Otherwise, leave pathSegmentsToKeep as 0.
+      // https://username.github.io/Aprendo-mas/dashboard becomes
+      // https://username.github.io/Aprendo-mas/?/dashboard
       var pathSegmentsToKeep = 1;
 
       var l = window.location;
